fixed css for js, aligned js to fit with css

--- a/joblisting.css
+++ b/joblisting.css
@@ -6,9 +6,9 @@
 
 }
 
-.container {
+#container {
 	display: flex;
-	flex-wrap: wrap;
+	flex-flow: row wrap;
 	justify-content: center;
 	width: 100%;
 	margin: 0 auto;
@@ -16,7 +16,6 @@
 }
 .job {
 	overflow: hidden;
-	flex-direction: column;
 	width: 35%;
 	justify-content: flex-start;
 	border: solid 2px red;
